@@ -21,13 +21,13 @@ alias cls=clear
 alias p="ping google.com"
 alias fgrep="find . -name \* -print0 | xargs -0 grep -i "
 alias vi="/usr/bin/vim"
-alias py="python2.7 `which ipython`"
+alias py="ipython -nobanner -noconfirm_exit -pprint"
 
 export TEMP="/tmp"
 
-export SCRIPTS_DIR="$HOME/scripts"
-export SCRIPTY_DIR="$HOME/scripts/scripty"
-export scripty="$HOME/scripts/scripty"
+export SCRIPTS_DIR="/scripts"
+export SCRIPTY_DIR="/scripts/scripty"
+export scripty="/scripts/scripty"
 export PATH=$PATH:$SCRIPTS_DIR
 # Add everything under scripty to path
 export PATH="${PATH}$(find $SCRIPTY_DIR -name '.*' -prune -o -type d -printf ':%p')"
