@@ -1,4 +1,5 @@
 from mercurial import commands
+from hgext import bookmarks
 
 def post_push(ui, repo, pats, opts, *args, **kwargs):
     """ Push to Github after pushing to BitBucket """
@@ -13,5 +14,8 @@ def post_push(ui, repo, pats, opts, *args, **kwargs):
 
         github = 'git+ssh://git@github.com/{username}/{reponame}.git'
         github = github.format(username=username, reponame=reponame)
+
+        # Move "master" bookmark to point to tip
+        bookmarks.bookmark(ui, repo, mark='master', rev='tip', force=True)
 
         return commands.push(ui, repo, github, **opts)
